Maintenance - Add basic project configuration - Remove CodeCov - Migrate off of PR labeler - Integrate Sonar - Configure Qlty - Apply recommended code style changes - Update some dependencies - Update workflows
Signed-off-by: Esta Nagy <nagyesta@gmail.com>